ProcessBuilder seems to work as expected